# tsr_15_00

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
classes/: Zad_1_tsr.docx
classes/lab6/: Zad_6_tsr.docx
classes/lab7/: Zad_7_tsr.docx
classes/lab8/: Zad_8_tsr.docx
classes/lab9/: Sprawozdanie_niepełnosprawni.docx  Zad_9_tsr_file.docx
docs/: docs.md  docs.txt
project/: CMakeLists.txt  LICENCE
project/src/: CMakeLists.txt  app.cpp  app.h  application.cpp  application.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
project/src/core/: blackboard.cpp  blackboard.h  board.cpp  board.h  cursor.h  label.hpp  nodevaluefinder.cpp  nodevaluefinder.h  numberbox.hpp  numberboxcore.hpp  port.cpp  port.h  resultparser.cpp  resultparser.h  resultparser.hpp
project/src/nodes/: addnode.cpp  addnode.h  addnode.hpp  blackboard.cpp  blackboard.h  corenode.cpp  corenode.h  cursor.h  dividenode.cpp  dividenode.h  dividenode.hpp  modulonode.cpp  modulonode.h  modulonode.hpp  multiplynode.cpp  multiplynode.h  multiplynode.hpp  nodecore.cpp  nodecore.h  nodevaluefinder.cpp  nodevaluefinder.h  port.cpp  printnode.cpp  printnode.h  printnode.hpp  subtractnode.cpp  subtractnode.h  subtractnode.hpp  var1dnode.cpp  var1dnode.h  var1dnode.hpp  varnode.hpp
project/src/views/: Adding.qml  Database.js  Modulo.qml  Sandbox.qml  Subtracting.qml  Tasks.qml  main.qml
project/tests/: CMakeLists.txt  tester.cpp
src/: App.cpp  App.h  Application.cpp  Application.h  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tester.cpp
university_docs/lab10/: lab10.docx
university_docs/lab2/: Zad_2_tsr.docx
university_docs/lab3/: lab3.docx
university_docs/lab5/: Zad_4_tsr.docx
university_docs/stage1/: Spr_Etap_1_tsr-1.docx
university_docs/stage2-update/: fagan.docx
university_docs/stage2_update/: Spr_Etap_2_tsr.docx
